[package]
name = "surveilance-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
eframe = "0.30.0"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
home = "0.5.11"
image = { version = "0.25.5", features = ["jpeg"] }
itertools = "0.14.0"
opencv = { version = "0.93.5", features = ["clang-runtime"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
